; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_tty_port.c_tty_port_link_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_tty_port.c_tty_port_link_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_port = type { i32 }
%struct.tty_driver = type { i32, %struct.tty_port** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_port_link_device(%struct.tty_port* %0, %struct.tty_driver* %1, i32 %2) #0 {
  %4 = alloca %struct.tty_port*, align 8
  %5 = alloca %struct.tty_driver*, align 8
  %6 = alloca i32, align 4
  store %struct.tty_port* %0, %struct.tty_port** %4, align 8
  store %struct.tty_driver* %1, %struct.tty_driver** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.tty_driver*, %struct.tty_driver** %5, align 8
  %9 = getelementptr inbounds %struct.tty_driver, %struct.tty_driver* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp uge i32 %7, %10
  %12 = zext i1 %11 to i32
  %13 = call i64 @WARN_ON(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  br label %24

16:                                               ; preds = %3
  %17 = load %struct.tty_port*, %struct.tty_port** %4, align 8
  %18 = load %struct.tty_driver*, %struct.tty_driver** %5, align 8
  %19 = getelementptr inbounds %struct.tty_driver, %struct.tty_driver* %18, i32 0, i32 1
  %20 = load %struct.tty_port**, %struct.tty_port*** %19, align 8
  %21 = load i32, i32* %6, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds %struct.tty_port*, %struct.tty_port** %20, i64 %22
  store %struct.tty_port* %17, %struct.tty_port** %23, align 8
  br label %24

24:                                               ; preds = %16, %15
  ret void
}

declare dso_local i64 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
